# entreview-training

./: .gitignore  entreview-training.sln  entreview.cs
LearnC/: iosSec.txt  setup_ios_pentest_tools.sh
LearnC/cli_calculator/: tasks
LearnC/iOS/: test_keychain.m
LearnCpp/: LearnCpp.sln
LearnCpp/LearnCpp/: LearnCpp.cpp  LearnCpp.vcxproj  LearnCpp.vcxproj.filters  LearnPointersOne.cpp  learnroadmap.txt
LearnCpp/calculator/: CMakeLists.txt  readme.txt
LearnCpp/calculator/include/domain/: calculator.h
LearnCpp/calculator/src/domain/: calculator.cpp
angular/: ngZone.ts
aws/module1/: lab2.js
aws/module2/: preguntas.txt
azure/bicep/: webapp_ip.sh
backend/NET/: csharpAndNETEvolution.txt
backend/java/junit/: course.txt
cloud/aws/: course.txt
cloud/azure/: azureapp services.txt  deploy.yml  dotnet_developer_associate_syllabus.txt  githubactions.txt
cybersec/: treelearn.txt
cybersec/bash/: bash1.sh
cybersec/linuxbasicsforhackers/: resources.txt
cybersec/operatingSystems/: modulo1  syllabus.txt
frontend/angular/: ngZone.ts  preguntas.md
frontend/cssyscss/: temarioCss.txt  temarioScss.txt
frontend/javascript/: jsTheweirdparts.txt  jsexercises1.js  jsexercises2.js  jsweirdparts1.txt
frontend/react/: Entrevista1.txt  hooks.jsx  internals.jsx  libnraryes_react.txt  pensarEnReact.txt  pensar_en_react2.txt  reduxtoolkit.txt
frontend/typescript/: course.txt  evolucionES.txt  typescript_1.ts  typescript_3_generics.ts
java/course/: course.txt  preguntas.txt
react/: hooks.jsx  preguntas.md  test.jsx
sql/: course.txt
sql/ETL/: course.txt
(+238 files in other folders)
